# fastmcp_test

./: .gitignore  LICENSE  README.md  pyproject.toml
client_agent/: client.py  config.py  multi_server_mcp.py  pyproject.toml
server/: config.py  math_server.py  pyproject.toml  weather_server.py
